# MemoriaUSM

./: FEMUR.m3d  NO OLVIDAR  OCTANTES NUEVO PROBLEMA  README.md  Resultados  bugfaces.off  casos_femur_protesis  femur_protesis.m3d  fertilty_cgal.mdl  geomviewAa7C4i  geomviewJvA9ot  mesher_roi  mi_malla_output (original).m3d  mi_malla_output.m3d  tet_equi.off
elementRemoval/: CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  cmake_install.cmake  cyl1.txt  misoct.m3d  misoct.txt  misoct_temp.txt  remove_elements
format/: AnsysQuadEdge.cpp  AnsysQuadEdge.h  AnsysToM3d.cpp  AnsysToM3d.h  AnsysToMesh.cpp  AnsysToMesh.h  AnsysToMixAnsys.cpp  AnsysToMixAnsys.h  AnsysToQuadAnsys.cpp  AnsysToQuadAnsys.h  CMakeCache.txt  CMakeLists.txt  InpToM3d.cpp  InpToM3d.h  JoinMdl.cpp  JoinMdl.h  JoinOff.cpp  JoinOff.h  JoinPoint.cpp  JoinPoint.h  M3dToAnsys.cpp  M3dToAnsys.h  M3dToDolfinXML.cpp  M3dToDolfinXML.h  M3dToMdlCloud.cpp  M3dToMdlCloud.h  Makefile  MatlabToMdl.cpp  MatlabToMdl.h  MdlToDolfinXML.cpp  MdlToDolfinXML.h  MdlToMatlab.cpp  MdlToMatlab.h  MdlToMdlTriangle.cpp  MdlToMdlTriangle.h  MdlToOff.cpp  MdlToOff.h  MdlToSmesh.cpp  MdlToSmesh.h  MeshToAnsys.cpp  (+26 more)
geometry/: Element.cpp  Element.h  Face.cpp  Face.h  FaceContainer.cpp  FaceContainer.h  Hexahedra.cpp  Hexahedra.h  Makefile  Point.cpp  Point.h  PointM3d.cpp  PointM3d.h  Prism.cpp  Prism.h  Pyramid.cpp  Pyramid.h  Tetrahedra.cpp  Tetrahedra.h
mesher_boundary/: BoundaryTemplate1.cpp  BoundaryTemplate2.cpp  BoundaryTemplate2.h  BoundaryTemplate3.cpp  BoundaryTemplate3.h  BoundaryTemplate4.cpp  BoundaryTemplate4.h  BoundaryTemplate5.cpp  BoundaryTemplate5.h  BoundaryTemplate6.cpp  BoundaryTemplate6.h  CoteMarek.h  EnhancedElement.cpp  EnhancedElement.h  GridMesher.cpp  Main.cpp  Mesher.cpp  Mesher.h  Mesher_nogeneral.cpp  SurfTemplate1.cpp  SurfTemplate2.cpp  SurfTemplate3.cpp  SurfTemplate4.cpp  SurfTemplate5.h  SurfTemplate6.cpp  SurfTemplate6.h  apuntes  femur_protesis.m3d  femur_protesis.mdl  mesher_boundary  mi_malla_output.m3d  mi_malla_output.mdl  viewer
mesher_boundary_debug/: BoundaryTemplate1.cpp  BoundaryTemplate2.cpp  BoundaryTemplate3.cpp  BoundaryTemplate3.h  BoundaryTemplate4.cpp  BoundaryTemplate5.cpp  BoundaryTemplate6.cpp  BoundaryTemplate7.cpp  BoundaryTemplate7.h  EnhancedElement.cpp  EnhancedElement.h  Makefile  Mesher.cpp  SurfTemplate1.cpp  SurfTemplate2.cpp  SurfTemplate7.cpp  hex_en.off  mesher_boundary  mi_malla_output.mdl
mesher_boundary_debugging/: BoundaryTemplate1.cpp  BoundaryTemplate2.cpp  BoundaryTemplate2.h  BoundaryTemplate3.cpp  BoundaryTemplate4.cpp  BoundaryTemplate5.cpp  BoundaryTemplate6.cpp  BoundaryTemplate6.h  BoundaryTemplate7.cpp  EnhancedElement.cpp  FEMesh.h  GridMesher.h  HexRotation.h  Mesher.cpp  Point3D.cpp  SurfTemplate1.cpp  SurfTemplate1.h  SurfTemplate2.cpp  SurfTemplate2.h  SurfTemplate3.cpp  SurfTemplate3.h  SurfTemplate4.cpp  SurfTemplate4.h  SurfTemplate5.cpp  SurfTemplate6.cpp  SurfTemplate7.cpp  SurfTemplate7.h  TriMesh.cpp  TriMesh.h  cambios  femur_protesis.m3d  femur_protesis.mdl  input.off  mesher_boundary  mi_malla_output.m3d  mi_malla_output.mdl
mesher_boundary_memoria/: BoundaryTemplate1.h  BoundaryTemplate2.cpp  BoundaryTemplate3.cpp  BoundaryTemplate4.cpp  BoundaryTemplate6.cpp  BoundaryTemplate7.h  BoundaryTemplatePrism.h  BoundaryTemplatePyramid.h  CMakeCache.txt  CMakeLists.txt  CoteMarek.h  EnhancedElement.cpp  EnhancedElement.h  HexRotation.cpp  Mesher.cpp  Mesher_nogeneral.cpp  Point3D.h  SurfTemplate1.h  SurfTemplate2.h  SurfTemplate3.h  SurfTemplate4.h  SurfTemplate5.cpp  SurfTemplate6.cpp  SurfTemplate7.cpp  SurfTemplate7.h  cmake_install.cmake  femur_protesis.m3d  femur_protesis.mdl  femur_protesis_5.m3d  femur_protesis_6.m3d  hex_en.mdl  mesher_boundary  mi_malla_output.m3d  mi_malla_output.mdl  mi_malla_output_pre3.m3d
mesher_boundary_memoria2/: BoundaryTemplate2.cpp  BoundaryTemplate5.h  BoundaryTemplate7.cpp  MeshPoint.h  PROST.mdl  SurfTemplate6.h  mesher_boundary  mi_malla_output.m3d  mi_malla_output.mdl
mesher_boundary_original/: BoundaryTemplate1.cpp  BoundaryTemplate2.h  BoundaryTemplate4.h  BoundaryTemplate6.cpp  BoundaryTemplatePrism.cpp  BoundaryTemplatePyramid.cpp  CMakeCache.txt  EnhancedElement.cpp  Main.cpp  MeshPoint.cpp  Mesher.cpp  SurfTemplate5.cpp  SurfTemplate5.h  SurfTemplate7.h  femur_protesis.m3d  femur_protesis.mdl  mesher_boundary  mi_malla_output.mdl
mesher_services/: Coord3D.cpp  Coord3D.h  Edge.cpp  Edge.h  EdgeContainer.cpp  EdgeContainer.h  Makefile  Mesh.cpp  Mesh.h  Mesh_improved.cpp  Mesh_improved.h  Mesh_working_Vincent.cpp  Mesh_working_Vincent.h  Pair.cpp  Pair.h  Triangle.cpp  Triangle.h  VPoint3D.cpp  VPoint3D.h  Vector3D.cpp  Vector3D.h
read_write/: AnsysFormat.cpp  AnsysFormat.h  FileFormat.h  M3dPrinter.cpp  M3dPrinter.h  Makefile  ReadAnsys.cpp  ReadAnsys.h  ReadInp.cpp  ReadInp.h  ReadM3d.cpp  ReadM3d.h  ReadMatlab.cpp  ReadMatlab.h  ReadMdl.cpp  ReadMdl.h  ReadMeshSurface.cpp  ReadMeshSurface.h  ReadMeshVolume.cpp  ReadMeshVolume.h  ReadOff.cpp  ReadOff.h  ReadPascal.cpp  ReadPascal.h  ReadSmesh.cpp  ReadSmesh.h  WriteAnsys.cpp  WriteAnsys.h  WriteM3d.cpp  WriteM3d.h  WriteMatlab.cpp  WriteMatlab.h  WriteMdl.cpp  WriteMdl.h  WriteMeshVolume.cpp  WriteMeshVolume.h  WriteOff.cpp  WriteOff.h  WriteSmesh.cpp  WriteSmesh.h
src/: CMakeCache.txt  CMakeLists.txt  CoteMarek.h  CoteMarek_old.h  EnhancedElement.cpp  EnhancedElement.h  FEMesh.h  FaceDiagonal.cpp  FaceDiagonal.h  GeometricTransform.cpp  GridMesher.cpp  GridMesher.h  Main.cpp  Makefile  MeshPoint.h  Mesher.cpp  Mesher.h  MixTest.cpp  Octant.cpp  Octant.h  OctreeEdge.cpp  OctreeEdge.h  PatternFactory.cpp  PatternFactory.h  PatternFactory_bkp.cpp  PatternFactory_bkp2.cpp  PatternFactory_inversedElement.cpp  Prism.cpp  Prism.h  RefinementAllRegion.cpp  RefinementAllRegion.h  RefinementCubeRegion.cpp  RefinementCubeRegion.h  (+40 more)
view/: CMakeCache.txt  CMakeLists.txt  EnhancedElement.cpp  EnhancedElement.h  Main.cpp  Main.h  Makefile  View.h  ViewM3d.cpp  ViewM3d.h  ViewM3d_bkp.cpp  ViewMdl.cpp  ViewMdl.h  cmake_install.cmake  viewer
(+13 files in other folders)
